argocd/capitec-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capitec
spec:
  ingressClassName: nginx

  rules:
  - host: capitec.jumphost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capitec-service
            port:
              number: 5000
